test/2-error/label-extraneous.err
type error: test/2-error/label-extraneous.ploy:3:14-22: struct field #0 has label `i`; expected no label;
argument;
actual type: (i:Int j:Int)
  main = exit.f(i=0 j=0)
               ~~~~~~~~~
note: test/2-error/label-extraneous.ploy:3:13-22:
argument;
expected type: (Int Int)
  main = exit.f(i=0 j=0)
              ~~~~~~~~~~
